# roboenvcv

./: CMakeLists.txt  package.xml
else/: euclidean_clustering.cc
examples/: find_green_kinect.cc  find_ocr_kinect.cc  find_takenoko_kinect.cc
include/roboenvcv/: colors.h  interaction.h  interaction_pcl.h  kinectutils.hh  proc2d.h  roboenvcv.hh  roboenvcv_extra.hh  types.h  types_light.h  utils.h  xtionutils.hh
launch/: person_detection.launch  person_detection_common.launch  person_detection_light.launch
launch2/: person_detection2.launch  person_detection2_gpu.launch  person_detection2_onbot.launch
msg/: Person.msg  PersonCoordinate.msg  RegionOfInterestInfo.msg  RegionOfInterestInfos.msg  UInt8ArrayStamped.msg
nodes/: crop_image.cc  darknet_faceinfo_extractor.cc  darknethaar_faceinfo_extractor.cc  dynamic_sensor_tf.cc  facepose_detector.py  haar_faceinfo_extractor.cc  hyperfacemodel.py  id_mapper.cc  static_sensor_tf.cc  to_global.cc
nodes2/: crop_image_timestamped.cc  dynamic_sensor_tfstamped.cc  id_mapper2.cc  openpose_faceinfo_extractor.cc  sensordirection_axis_static.cc  sensordirection_filter.cc  to_global_dynamic.cc
src/: roboenvcv.cc  roboenvcv_extra.cc
